# bashlib

./: .gitignore  .simplecov  .travis.yml  AUTHORS  Makefile  Makefile.am  README.md  bashlib.in  bashlib.m4  bats_test.src  build.sh  configure  configure.ac
test/: bashlib.bash  bashlib.bats
test/fixtures/bashlib/i/am/: pretty.sh
test/fixtures/bashlib/no/: spoon.sh
