AC_INIT([bashlib], [0.0.1], [schreibah@gmail.com])

dnl By schreibah@gmail.com

AC_CONFIG_AUX_DIR([config])
AM_INIT_AUTOMAKE([foreign -Wall -Werror dist-bzip2 dist-zip])

AC_CONFIG_FILES([Makefile])

AC_ARG_VAR([otherlibdirs], [A colon-separated list of libraries to search for bashlib files])

AC_OUTPUT
